# Flaude

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml  ci.yml  codeql.yaml  codeql.yml
configs/: params.yaml  prompts.yaml
src/core/agents/: chains.py
src/core/capabilities/: memory.py  rag.py  title_gen.py
src/core/tools/: __init__.py  files.py  math.py  rag.py  web.py
src/core/workflow/: graph.py  nodes.py  state.py
src/exception/: __init__.py
src/infra/: config.py  database.py
src/logger/: __init__.py
src/ui/: app.py  state.py
src/ui/assets/: styles.css
src/ui/components/: chat.py  sidebar.py
tests/: conftest.py
tests/core/capabilities/: test_memory.py  test_rag.py
tests/core/workflow/: test_graph.py  test_nodes.py
tests/ui/: test_app.py
