[project]
name = "flaude"
version = "0.1.0"
description = "A chatbot that asks before it acts, remembers who you are, and looks things up instead of making them up."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langchain",
    "langchain-google-genai",
    "langsmith",
    "pydantic",
    "python-dotenv",
    "rich",
    "pandas",
    "numpy",
    "langchain-community",
    "duckduckgo-search",
    "langchain-experimental",
    "ddgs",
    "networkx",
    "matplotlib",
    "catppuccin",
    "termcolor",
    "uuid",
    "streamlit",
    "watchdog",
    "langgraph-checkpoint-sqlite",
    "sympy",
    "langchain-chroma",
    "pypdf",
    "langgraph-checkpoint-postgres",
    "psycopg[binary,pool]",
    "colorlog>=6.10.1",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.mypy]
ignore_missing_imports = true
